float_eq/tests/derive_tests/debug_ulps_diff/debug_ulps_diff_enum.stderr
error: FloatEqDebugUlpsDiff may only be derived for structs.
 --> $DIR/debug_ulps_diff_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^
