float_eq/tests/derive_tests/debug_ulps_diff/debug_ulps_diff_enum.rs
use float_eq::FloatEqDebugUlpsDiff;

#[derive(Clone, Copy, Debug, PartialEq, PartialOrd, FloatEqDebugUlpsDiff)]
enum SomeEnum {
    Float(f32),
    Double(f64),
}

fn main() {}
